--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
             <img src="./imagens/index/graduacao_1366x768.jpg" alt="First slide">
-            <div class="carousel-caption-amarelo d-none d-md-block">
+            <div class="carousel-caption-amarelo">
               <h5 id="item-carousel-titulo" class="textoBranco"><strong>Eleve suas turmas a outro patamar!</strong></h5>
               <p id="item-carousel-paragrafo" class="textoBranco"><em>Seja responsável pelo sucesso e sinta orgulho
                   máximo de seus púpilos em sala de aula...</em></p>
@@ -78,7 +78,7 @@
           </div>
           <div class="carousel-item">
             <img src="./imagens/index/cadernos_1366x768.jpg" alt="Second slide">
-            <div class="carousel-caption-azulBB d-none d-md-block">
+            <div class="carousel-caption-azulBB d-md-inline-block">
               <h5 id="item-carousel-titulo" class="textoMarinho"><strong>Testemunhe um maior rendimento em sala de
                   aula!</strong></h5>
               <p id="item-carousel-paragrafo" class="textoMarinho"><em>Melhore o engajamento e aprendizado real dos seus
@@ -87,7 +87,7 @@
           </div>
           <div class="carousel-item">
             <img src="./imagens/index/teacher-zhu_1366x768.jpg" alt="Third slide">
-            <div class="carousel-caption-azul d-none d-md-block">
+            <div class="carousel-caption-azul">
               <h5 id="item-carousel-titulo" class="textoAmarelo"><strong>De professores para professores!</strong></h5>
               <p id="item-carousel-paragrafo" class="textoAmarelo"><em>Colabore, crie, comente, aperfeiçoe, incentive e
                   transforme junto com a comunidade!</em></p>
